<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.alibaba</groupId>
    <artifactId>mpc4j</artifactId>
    <packaging>pom</packaging>
    <version>1.1.3-SNAPSHOT</version>
    <modules>
        <module>mpc4j-common-circuit</module>
        <module>mpc4j-common-data</module>
        <module>mpc4j-common-rpc</module>
        <module>mpc4j-common-sampler</module>
        <module>mpc4j-common-structure</module>
        <module>mpc4j-common-tool</module>
        <module>mpc4j-crypto-algs</module>
        <module>mpc4j-crypto-fhe</module>
        <module>mpc4j-dp-cdp</module>
        <module>mpc4j-dp-ldp</module>
        <module>mpc4j-dp-service</module>
        <module>mpc4j-s2pc-aby</module>
        <module>mpc4j-s2pc-opf</module>
        <module>mpc4j-s2pc-pcg</module>
        <module>mpc4j-s2pc-pir</module>
        <module>mpc4j-s2pc-pso</module>
        <module>mpc4j-s2pc-pjc</module>
        <module>mpc4j-s2pc-upso</module>
        <module>mpc4j-s3pc-abb3</module>
        <module>mpc4j-sml-opboost</module>
        <module>mpc4j-work-dpsi</module>
        <module>mpc4j-work-psipir</module>
        <module>mpc4j-work-payable</module>
    </modules>

    <properties>
        <!-- min JDK version is 17 since we need to use SIMD-->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.test.skip>true</maven.test.skip>
        <smile.version>2.6.0</smile.version>
        <slf4j.version>2.0.13</slf4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>32.1.3-jre</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>1.78.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/junit/junit -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.9</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.11.0</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-reload4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.6.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/cc.redberry/rings，一个实现伽罗华域的开源库-->
            <dependency>
                <groupId>cc.redberry</groupId>
                <artifactId>rings</artifactId>
                <version>2.5.5</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>4.1.111.Final</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>3.21.12</version>
                <scope>compile</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/ch.obermuhlner/big-math -->
            <dependency>
                <groupId>ch.obermuhlner</groupId>
                <artifactId>big-math</artifactId>
                <version>2.3.0</version>
            </dependency>
            <dependency>
                <groupId>com.google.privacy</groupId>
                <artifactId>differentialprivacy</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>ml.dmlc</groupId>
                <artifactId>xgboost4j_2.12</artifactId>
                <version>1.5.2</version>
            </dependency>
            <dependency>
                <groupId>com.github.haifengl</groupId>
                <artifactId>smile-core</artifactId>
                <version>${smile.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.haifengl</groupId>
                <artifactId>smile-math</artifactId>
                <version>${smile.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>com.github.haifengl</groupId>
                <artifactId>smile-data</artifactId>
                <version>${smile.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.haifengl</groupId>
                <artifactId>smile-io</artifactId>
                <version>${smile.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>1.9.0</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.roaringbitmap/RoaringBitmap -->
            <dependency>
                <groupId>org.roaringbitmap</groupId>
                <artifactId>RoaringBitmap</artifactId>
                <version>0.9.36</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.googlecode.javaewah/JavaEWAH -->
            <dependency>
                <groupId>com.googlecode.javaewah</groupId>
                <artifactId>JavaEWAH</artifactId>
                <version>1.1.13</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.lz4/lz4-java -->
            <dependency>
                <groupId>org.lz4</groupId>
                <artifactId>lz4-java</artifactId>
                <version>1.8.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>5.2.5</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>com.opencsv</groupId>
                <artifactId>opencsv</artifactId>
                <version>5.9</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.carrotsearch/hppc -->
            <dependency>
                <groupId>com.carrotsearch</groupId>
                <artifactId>hppc</artifactId>
                <version>0.10.0</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.ehcache/sizeof -->
            <dependency>
                <groupId>org.ehcache</groupId>
                <artifactId>sizeof</artifactId>
                <version>0.4.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgument>--add-modules=jdk.incubator.vector</compilerArgument>
<!--                    if we want to introduce preview APIs like FFI, uncomment the following line-->
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version> <!-- pick your own version -->
                <configuration>
                    <forkCount>1</forkCount>
                    <argLine>--add-modules=jdk.incubator.vector</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <attach>true</attach>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>